// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders items list empty 1`] = `
<div
  className="item-list-wrap"
>
  <table
    className="item-list-head hidden-touch hidden-sm-down"
  >
    <thead>
      <tr>
        <th>
          Title
        </th>
        <th>
          Creator
        </th>
        <th>
          Year
        </th>
        <th
          className="hidden-touch hidden-sm-down"
        >
          Date Modified
        </th>
        <th
          className="hidden-touch hidden-sm-down"
        />
        <th
          className="hidden-touch hidden-sm-down"
        />
      </tr>
    </thead>
  </table>
  <div
    className="item-list-body"
  >
    <ul
      className="item list"
    />
  </div>
</div>
`;

exports[`Renders items list fetching 1`] = `
<div
  className="spinner"
/>
`;

exports[`Renders items list with data 1`] = `
<div
  className="item-list-wrap"
>
  <table
    className="item-list-head hidden-touch hidden-sm-down"
  >
    <thead>
      <tr>
        <th>
          Title
        </th>
        <th>
          Creator
        </th>
        <th>
          Year
        </th>
        <th
          className="hidden-touch hidden-sm-down"
        >
          Date Modified
        </th>
        <th
          className="hidden-touch hidden-sm-down"
        />
        <th
          className="hidden-touch hidden-sm-down"
        />
      </tr>
    </thead>
  </table>
  <div
    className="item-list-body"
  >
    <ul
      className="item list"
    >
      <li
        className="item "
        onClick={[Function]}
      >
        <div
          className="metadata"
        >
          document-1
        </div>
        <div
          className="metadata author"
        />
        <div
          className="metadata year"
        />
        <div
          className="metadata hidden-touch hidden-sm-down"
        >
          2016-02-02
        </div>
        <div
          className="metadata hidden-touch hidden-sm-down"
        />
        <div
          className="metadata hidden-touch hidden-sm-down"
        />
      </li>
      <li
        className="item "
        onClick={[Function]}
      >
        <div
          className="metadata"
        >
          document-2
        </div>
        <div
          className="metadata author"
        />
        <div
          className="metadata year"
        />
        <div
          className="metadata hidden-touch hidden-sm-down"
        >
          2016-02-03
        </div>
        <div
          className="metadata hidden-touch hidden-sm-down"
        />
        <div
          className="metadata hidden-touch hidden-sm-down"
        />
      </li>
    </ul>
  </div>
</div>
`;
